assets/main.scss
---
---

@import "minima";

$header-heading-color: #BBB;
$header-bg-color: #000;

.site-header {
    color: $header-heading-color;
    text-align: center;
    background-color: $header-bg-color;
    background-image: url("/images/header.jpg");
    background-position: center;
    background-repeat: no-repeat;
    min-height: 80px;
}

.site-title {
    font-weight: 400;
}

.site-title:visited, .site-title:hover, site-title:active, site-title:link {
    color: $header-heading-color;
}

.site-nav .page-link {
    color: $header-heading-color;
    font-weight: bold;
}

.member-profile {
    margin-bottom: 3em;
}

.member-profile-text {
    line-height: 0.4;
}

body {
    font-family: Montserrat, Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: #818181;
}

h1, h2, h3, h4, h5, h6 {
    color: #111;
}

h2 .post-link{
    font-size: 18px;
}

// Next / previous page navigation
// Adapted from
// http://david.elbe.me/jekyll/2015/06/20/how-to-link-to-next-and-previous-post-with-jekyll.html
.PageNavigation {
  font-size: 14px;
  display: block;
  width: auto;
  overflow: hidden;
}

.PageNavigation a {
  display: block;
  width: 50%;
  float: left;
  margin: 1em 0;
}

.PageNavigation .next {
  text-align: right;
}

